--- a/meteo/templates/base.html.twig
+++ b/meteo/templates/base.html.twig
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Welcome!</title>
+
+		<!-- Balises pour le responsive -->
+		<meta
+		name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<!-- Bootstrap -->
+		<link
+		rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+		<!-- Notre CSS custom -->
+		<link rel="stylesheet" href="{{ asset("css/app.css") }}">
+	</head>
+
+	<body class="mb-5">
+		<nav class="container py-3 mb-3">
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a class="nav-link active" href="index.html">Accueil</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="mountain.html">Montagne</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="beaches.html">Plages</a>
+				</li>
+			</ul>
+		</nav>
+	</body>
+	<body>
+		{% block body %}{% endblock %}
+	</body>
 </html>
