--- a/meteo/templates/weather/index.html.twig
+++ b/meteo/templates/weather/index.html.twig
@@ -1,20 +1,83 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello WeatherController!{% endblock %}
+
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<!-- Minimal responsive + columns -->
+    <main class="container">
+        <div class="row">
+            <!-- Content (les pages) -->
+            <div class="col-9">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+                <h1 class="mb-5">Bienvenue sur la météo des villes !</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Spe_Symfony/symfo-e04-challenge-cle-meteo-Olivier340/meteo/src/Controller/WeatherController.php'|file_link(0) }}">src/Controller/WeatherController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Spe_Symfony/symfo-e04-challenge-cle-meteo-Olivier340/meteo/templates/weather/index.html.twig'|file_link(0) }}">templates/weather/index.html.twig</a></code></li>
-    </ul>
-</div>
+                <div class="item item--bg-snow">
+                    <div class="item--city"><a href="#">Annecy</a></div>
+                    <div class="item--forecast">29-01 : -4°C / 2°C</div>
+                </div>
+                <div class="item item--bg-rain">
+                    <div class="item--city"><a href="#">Biarritz</a></div>
+                    <div class="item--forecast">29-01 : -5°C / 0°C</div>
+                </div>
+                <div class="item item--bg-sun-cloud">
+                    <div class="item--city"><a href="#">Bordeaux</a></div>
+                    <div class="item--forecast">29-01 : 0°C / 10°C</div>
+                </div>
+                <div class="item item--bg-storm">
+                    <div class="item--city"><a href="#">Bruxelles</a></div>
+                    <div class="item--forecast">29-01 : -3°C / 5°C</div>
+                </div>
+                <div class="item item--bg-sun-cloud">
+                    <div class="item--city"><a href="#">Chambéry</a></div>
+                    <div class="item--forecast">29-01 : -2°C / 6°C</div>
+                </div>
+                <div class="item item--bg-snow">
+                    <div class="item--city"><a href="#">Grenoble</a></div>
+                    <div class="item--forecast">29-01 : -3°C / 3°C</div>
+                </div>
+                <div class="item item--bg-clouds">
+                    <div class="item--city"><a href="#">Lille</a></div>
+                    <div class="item--forecast">29-01 : 1°C / 7°C</div>
+                </div>
+                <div class="item item--bg-snow">
+                    <div class="item--city"><a href="#">Lyon</a></div>
+                    <div class="item--forecast">29-01 : 3°C / 12°C</div>
+                </div>
+                <div class="item item--bg-shower">
+                    <div class="item--city"><a href="#">Marseille</a></div>
+                    <div class="item--forecast">29-01 : -5°C / 5°C</div>
+                </div>
+                <div class="item item--bg-snow">
+                    <div class="item--city"><a href="#">Metz</a></div>
+                    <div class="item--forecast">29-01 : 2°C / 7°C</div>
+                </div>
+                <div class="item item--bg-shower">
+                    <div class="item--city"><a href="#">Montpellier</a></div>
+                    <div class="item--forecast">29-01 : 3°C / 11°C</div>
+                </div>
+                <div class="item item--bg-sun-cloud">
+                    <div class="item--city"><a href="#">Nantes</a></div>
+                    <div class="item--forecast">29-01 : 0°C / 6°C</div>
+                </div>
+                <div class="item item--bg-snow">
+                    <div class="item--city"><a href="#">Nice</a></div>
+                    <div class="item--forecast">29-01 : -3°C / 3°C</div>
+                </div>
+                <div class="item item--bg-shower">
+                    <div class="item--city"><a href="#">Paris</a></div>
+                    <div class="item--forecast">29-01 : 2°C / 11°C</div>
+                </div>
+                <div class="item item--bg-sun">
+                    <div class="item--city"><a href="#">Rouen</a></div>
+                    <div class="item--forecast">29-01 : 0°C / 8°C</div>
+                </div>
+                <div class="item item--bg-shower">
+                    <div class="item--city"><a href="#">Toulouse</a></div>
+                    <div class="item--forecast">29-01 : 1°C / 9°C</div>
+                </div>
+
+            </div>
+          {{ include('_partials/sidebar.html.twig') }}
+        </div>
+    </main>
 {% endblock %}
