--- a/meteo/templates/base.html.twig
+++ b/meteo/templates/base.html.twig
@@ -20,14 +20,14 @@
 	<body class="mb-5">
 		<nav class="container py-3 mb-3">
 			<ul class="nav nav-pills">
-				<li class="nav-item {% if app.request.get('_route') == 'home' %}active{% endif %}">
-					<a class="nav-link active" href="{{ path("home") }}">Accueil</a>
+				<li class="nav-item ">
+					<a class="nav-link {% if app.request.get('_route') == 'home' %}active{% endif %}" href="{{ path("home") }}">Accueil</a>
 				</li>
-				<li class="nav-item {% if app.request.get('_route') == 'mountain' %}active{% endif %}">
-					<a class="nav-link " href="{{ path("mountain") }}">Montagne</a>
+				<li class="nav-item ">
+					<a class="nav-link {% if app.request.get('_route') == 'mountain' %}active{% endif %}" href="{{ path("mountain") }}">Montagne</a>
 				</li>
-				<li class="nav-item {% if app.request.get('_route') == 'beach' %}active{% endif %}">
-					<a class="nav-link " href="{{ path("beach") }}">Plages</a>
+				<li class="nav-item ">
+					<a class="nav-link {% if app.request.get('_route') == 'beach' %}active{% endif %}" href="{{ path("beach") }}">Plages</a>
 				</li>
 			</ul>
 		</nav>
