--- a/meteo/templates/weather/mountain.html.twig
+++ b/meteo/templates/weather/mountain.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 
-
+{% block title %} Montagne - {{ parent() }} {% endblock %}
 {% block body %}
  <main class="container">
         <div class="row">
@@ -19,8 +19,5 @@
                     illum!</p>
 
             </div>
-          {{ include('_partials/sidebar.html.twig') }}
-        </div>
-    </main>
-  {# {{ path('weather_widget', {id : weather_id}) }}">{{weather.city}} #}
+        
 {% endblock %}
